@@ -1,3 +1,11 @@
+2010-01-05  Doug Evans  <dje@sebabeach.org>
+
+	* mode.scm (<mode>) Rename member non-mode-c-type to c-type.
+	All uses updated.
+	(mode:non-mode-c-type): Delete.
+	(mode:c-type): Update.
+	* rtl-c.scm (s-shop): Fix casting of DI mode values.
+
 2010-01-04  Doug Evans  <dje@sebabeach.org>
 
 	* gen-all (all_cgen_cpus): Add sh.
